[gd_scene load_steps=19 format=2]

[ext_resource path="res://images/arrows.png" type="Texture" id=1]
[ext_resource path="res://images/check.png" type="Texture" id=2]
[ext_resource path="res://images/Minifantasy_DungeonWallTiles.png" type="Texture" id=3]
[ext_resource path="res://images/selected.png" type="Texture" id=4]
[ext_resource path="res://images/attackable.png" type="Texture" id=5]
[ext_resource path="res://images/Minifantasy_DungeonFloorTiles.png" type="Texture" id=6]
[ext_resource path="res://screens/dungeon/Dungeon.gd" type="Script" id=7]
[ext_resource path="res://screens/dungeon/GameBoard.gd" type="Script" id=8]
[ext_resource path="res://screens/dungeon/UIOverlayTileMap.gd" type="Script" id=9]
[ext_resource path="res://screens/dungeon/TileMap.gd" type="Script" id=10]
[ext_resource path="res://units/Human/Human.tscn" type="PackedScene" id=11]
[ext_resource path="res://units/Archer/Archer.tscn" type="PackedScene" id=12]
[ext_resource path="res://units/Orc/Orc.tscn" type="PackedScene" id=13]
[ext_resource path="res://screens/dungeon/UIManager.gd" type="Script" id=14]
[ext_resource path="res://screens/dungeon/ArrowOverlayTileMap.gd" type="Script" id=15]

[sub_resource type="TileSet" id=25]
2/name = "Minifantasy_DungeonWallTiles.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 8, 8, 24, 32 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 1, 0 )
2/autotile/tile_size = Vector2( 8, 8 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
4/name = "Minifantasy_DungeonFloorTiles.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 56, 16 )
4/tile_mode = 2
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 8, 8 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="TileSet" id=26]
0/name = "selected.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "attackable.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=27]
0/name = "arrows.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 24 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 16, Vector2( 0, 1 ), 176, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 152, Vector2( 1, 2 ), 26, Vector2( 2, 0 ), 146, Vector2( 2, 1 ), 144, Vector2( 2, 2 ), 18, Vector2( 3, 1 ), 24, Vector2( 3, 2 ), 48 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 8, 8 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Dungeon" type="Node2D"]
script = ExtResource( 7 )

[node name="EndTurn" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource( 8 )
human = ExtResource( 11 )
orc = ExtResource( 13 )
archer = ExtResource( 12 )

[node name="TerrainTileMap" type="TileMap" parent="GameBoard"]
tile_set = SubResource( 25 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 4
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 1, 2, 2, 1, 3, 2, 1, 4, 2, 1, 5, 2, 1, 6, 2, 1, 7, 2, 2, 65536, 2, 65538, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 2, 65538, 131072, 2, 65538, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 2, 65538, 196608, 2, 65538, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 2, 65538, 262144, 2, 65538, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 2, 65538, 327680, 2, 65538, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 2, 65538, 393216, 2, 65538, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 2, 65538, 458752, 2, 131072, 458753, 2, 131073, 458754, 2, 131073, 458755, 2, 131073, 458756, 2, 131073, 458757, 2, 131073, 458758, 2, 131073, 458759, 2, 131074 )
script = ExtResource( 10 )

[node name="UIManager" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="UIOverlayTileMap" type="TileMap" parent="UIManager"]
tile_set = SubResource( 26 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 4
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
script = ExtResource( 9 )

[node name="ArrowOverlayTileMap" type="TileMap" parent="UIManager"]
tile_set = SubResource( 27 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 4
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
script = ExtResource( 15 )

[connection signal="tile_left_clicked" from="GameBoard/TerrainTileMap" to="GameBoard" method="_on_TerrainTileMap_tile_left_clicked"]
[connection signal="tile_right_clicked" from="GameBoard/TerrainTileMap" to="GameBoard" method="_on_TerrainTileMap_tile_right_clicked"]
